--- a/.github/workflows/cpp-ci.yml
+++ b/.github/workflows/cpp-ci.yml
@@ -1,2 +1,38 @@
+name: Build and Test (C++ Project)
 
+on:
+  push:
+    branches:
+      - main
+      - dev
+      - '**'    # run on all branches
+  pull_request:
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Checkout your code
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Step 2: Install build tools
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
+      # Step 3: Build the project using your makefile
+      - name: Build project
+        run: |
+          make
+
+      # Step 4: Run your tests (optional — if you have test targets)
+      - name: Run tests
+        run: |
+          if [ -f ./runTests ]; then
+            ./runTests
+          elif [ -f ./tests/runTests ]; then
+            ./tests/runTests
+          else
+            echo "No test executable found. Skipping tests."
+          fi
